--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,9 +1,8 @@
 name: Create and publish a Docker image
 
-#on:
-#  push:
-#    branches: ['release']
-on: [push]
+on:
+  push:
+    branches: ['release']
 
 env:
 #  REGISTRY: containers.HOSTNAME
