--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,33 +1,47 @@
-name: Create and publish a Docker image
+name: docker
 
 on:
-  push:
-    branches: ['release']
-
-env:
-#  REGISTRY: containers.HOSTNAME
-  IMAGE_NAME: ${{ github.repository }}
+  release:
+    types: [published]
 
 jobs:
-  build-and-push-image:
-    runs-on: [self-hosted]
-    permissions:
-      contents: read
-      packages: write
-
+  build-push-image:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Publish version env var
+        run: echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build the hello-docker Docker image
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: build and push the image
         run: |
-          docker build . --tag ghcr.io/FitprimeLabs/docker-php-nginx:latest --platform linux/arm64
-          docker run ghcr.io/FitprimeLabs/docker-php-nginx:latest
-          docker push ghcr.io/FitprimeLabs/docker-php-nginx:latest
+          docker buildx build . \
+            --build-arg BUILD_ID=${{ github.run_id }} \
+            --build-arg COMMIT_ID=$(git rev-parse --short "$GITHUB_SHA") \
+            --tag fitprimelabs/docker-php-nginx:${{ env.VERSION }} \
+            --tag fitprimelabs/docker-php-nginx:latest \
+            --platform linux/arm64 \
+            --push
+
+#      - name: Push readme
+#        uses: actionhippie/pushrm@v1
+#        with:
+#          provider: dockerhub
+#          target: fitprimelabs/docker-php-nginx
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+#          readme: README.md
